# nostrrepo

./: .env  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  THOUGHTS.md  justfile  rustfmt.toml
.github/workflows/: rust.yml
assets/iconoir/: LICENSE
licenses/: ICOINOIR-LICENSE
portan/: Cargo.toml  README.md
portan-git/: Cargo.toml
portan-git/src/: errors.rs  lib.rs
portan/src/: database.rs  errors.rs  issues.rs  lib.rs  repository.rs  types.rs  utils.rs
src/: app.rs  comms.rs  errors.rs  globals.rs  issues.rs  lib.rs  main.rs  people.rs  repositories.rs  settings.rs
src/db/: mod.rs
src/nostr/: mod.rs
src/overlord/: mod.rs
src/ui/: explore.rs  issue.rs  issues.rs  mod.rs  new_repository.rs  patch.rs  repository.rs  settings.rs
src/views/: explore.rs  issues.rs  mod.rs  new_repository.rs  patch.rs  repository.rs
