[package]
name = "gitnostr"
version = "0.1.0"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
edition = "2021"
license = "BSD 3-Clause OR Apache-2.0"
rust-version = "1.65"


[workspace]

members = [
    "portan",
    "portan-git"
]

[dependencies]
egui = "0.20.1"
eframe = { version = "0.20.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
portan = { path = "portan" }
portan-git = { path = "portan-git" }
chrono = "0.4.23"
log = "0.4.17"
egui_extras = { version = "0.20.0", features = ["svg"] }
anyhow = "1"
dirs = "4.0"
url = "2.3.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# WASM can't work right now as some deps of nostr_rust are not compatible
# Just gonna comment it out as would be nice to make that possible
# web:
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# tracing-wasm = "0.2"
# wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
