[package]
name = "portan"
authors = ["thesimplekid"]
license = "BSD 3-Clause OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
minreq = "2.6.0"
serde = "1"
serde_json = "1"
# nostr_rust = { path = "../../nostr_rust" } 
nostr_rust = "0.19.2"
log = "0.4"
env_logger = "0.9.0"
thiserror = "1"
dotenvy = "0.15.6"
dirs = "4"
redb = "0.10.0"